--- a/Project 2/Project 2.ipynb
+++ b/Project 2/Project 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,14 +65,37 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "etas = [10^-4, 10^-3, 10^-2, 10^-1]\n",
+    "numMiniBatch = []"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def olsRegression(X_train,X_test,y_train,y_test, etas, numMiniBatch, CV):\n",
+    "    \n",
+    "    beta = np.random.normal(scale=0.1, X_train.shape[1])\n",
+    "    \n",
+    "    for i in range(NIterations):\n",
+    "        gradients = 2.0/m*X_train.T @ ((X_train @ beta)-y)\n",
+    "        beta -= eta*gradients\n",
+    "\n",
+    "    betaAna = np.linalg.pinv(X_train.T.dot(X_train)).dot(X_train.T).dot(y_train)\n",
+    "    y_tilde = (X_train @ beta)\n",
+    "    y_pred = (X_test @ beta)\n",
+    "\n",
+    "    if CV == False:\n",
+    "        print(f\"The R2 value for a polynomial of order {degree}, OLS test: {R2(y_test, y_pred)}\")\n",
+    "        print(f\"The MSE value for a polynomial of order {degree}, OLS test: {MSE(y_test, y_pred)}\")\n",
+    "        print(f\"\\nThe R2 value for a polynomial of order {degree}, OLS train: {R2(y_train, y_tilde)}\")\n",
+    "        print(f\"The MSE value for a polynomial of order {degree}, OLS train: {MSE(y_train, y_tilde)}\")\n",
+    "        \n",
+    "    return beta, y_pred"
+   ]
   }
  ],
  "metadata": {
@@ -91,7 +114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
