GD almost working, TODO: SGD

--- a/Project 2/Project 2.ipynb
+++ b/Project 2/Project 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,15 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.linear_model import SGDRegressor\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
     "from numba import jit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,6 +56,26 @@
     "            X[:,q+j] = (x1**(i-j))*(x2**j)\n",
     "    return X\n",
     "\n",
+    "# Calculate the mean square error (MSE)\n",
+    "def MSE(y_data, y_model):\n",
+    "    n = np.size(y_model)\n",
+    "    return np.sum((y_data-y_model)**2)/n\n",
+    "\n",
+    "# Calculate the coefficient of determination (R2)\n",
+    "def R2(y_data, y_model):\n",
+    "    n = np.size(y_data)\n",
+    "    return 1 - np.sum((y_data-y_model)**2)/np.sum((y_data-(np.sum(y_data)/n))**2)\n",
+    "\n",
+    "def Scale(X_train, X_test):\n",
+    "    XX = np.copy(X_test)\n",
+    "    if X_train.shape[1] > 1:\n",
+    "        scaler = StandardScaler()\n",
+    "        scaler.fit(X_train[:,1:])\n",
+    "        X_train[:,1:] = scaler.transform(X_train[:,1:])\n",
+    "        XX[:,1:] = scaler.transform(XX[:,1:])  \n",
+    "    return X_train, XX#, y_train[:, np.newaxis], y_test[:, np.newaxis]\n",
+    "\n",
+    "\n",
     "# The stochastic gradient descent method\n",
     "def SGD(X, y):\n",
     "    theta_linreg = np.linalg.inv(X.T @ X) @ (X.T @ y)\n",
@@ -62,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,30 +95,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The R2 value for a polynomial of order 5, OLS train: 0.8815155225116601\n",
+      "The MSE value for a polynomial of order 5, OLS train: 0.008812339045607888\n",
+      "\n",
+      "The R2 value for a polynomial of order 5, Ana train: 0.9787329892861849\n",
+      "The MSE value for a polynomial of order 5, Ana train: 0.001581743979207379\n",
+      "[[ 0.44203531]\n",
+      " [-0.08135357]\n",
+      " [ 0.09690848]\n",
+      " [-0.21727203]\n",
+      " [ 0.21481874]\n",
+      " [-0.51635915]\n",
+      " [-0.20647616]\n",
+      " [ 0.10508266]\n",
+      " [-0.08241757]\n",
+      " [-0.21719076]\n",
+      " [ 0.10065652]\n",
+      " [ 0.02883856]\n",
+      " [-0.05554811]\n",
+      " [-0.15038917]\n",
+      " [ 0.08407566]\n",
+      " [ 0.12598202]\n",
+      " [ 0.00113328]\n",
+      " [-0.02028955]\n",
+      " [ 0.05817004]\n",
+      " [ 0.06189564]\n",
+      " [ 0.32684675]]\n",
+      "\n",
+      "[[ 0.44203531]\n",
+      " [ 1.24797588]\n",
+      " [ 0.29523347]\n",
+      " [-4.49953049]\n",
+      " [-0.54424774]\n",
+      " [ 0.10509059]\n",
+      " [ 1.26031001]\n",
+      " [ 2.61592339]\n",
+      " [ 0.24034948]\n",
+      " [-5.61627528]\n",
+      " [ 5.34541355]\n",
+      " [-3.44027975]\n",
+      " [ 2.29726577]\n",
+      " [-2.68369269]\n",
+      " [ 9.27701219]\n",
+      " [-3.59182501]\n",
+      " [ 1.11703174]\n",
+      " [-0.1657703 ]\n",
+      " [-1.26348447]\n",
+      " [ 1.89484826]\n",
+      " [-4.23729917]]\n"
+     ]
+    }
+   ],
    "source": [
-    "def olsRegression(X_train,X_test,y_train,y_test, etas, numMiniBatch, CV):\n",
+    "np.random.seed(26)\n",
+    "\n",
+    "sig2 = 0#.01 # noise variance\n",
+    "degree = 5 # polynomial degree\n",
+    "n = 10 # number of data points for each feature\n",
+    "x1, x2, y = createDataPoints(n, sig2)\n",
+    "X_train = createDesignMatrix(x1,x2,degree)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.3)\n",
+    "X_train, X_test = Scale(X_train, X_test)\n",
+    "y_train = y_train[:, np.newaxis]\n",
+    "\n",
+    "m = X_train.shape[0] # number of training examples\n",
+    "eta = 0.001\n",
+    "NIterations = 100000\n",
+    "\n",
+    "def olsRegression(X_train,X_test,y_train,y_test, etas, numMiniBatch, CV=True):\n",
     "    \n",
-    "    beta = np.random.normal(scale=0.1, X_train.shape[1])\n",
+    "    beta = np.random.normal(scale=0.1, size=(X_train.shape[1],1))\n",
     "    \n",
     "    for i in range(NIterations):\n",
-    "        gradients = 2.0/m*X_train.T @ ((X_train @ beta)-y)\n",
+    "        gradients = 2.0/m*X_train.T @ ((X_train @ beta)-y_train)\n",
     "        beta -= eta*gradients\n",
     "\n",
     "    betaAna = np.linalg.pinv(X_train.T.dot(X_train)).dot(X_train.T).dot(y_train)\n",
     "    y_tilde = (X_train @ beta)\n",
+    "    y_ana = (X_train @ betaAna)\n",
     "    y_pred = (X_test @ beta)\n",
-    "\n",
-    "    if CV == False:\n",
-    "        print(f\"The R2 value for a polynomial of order {degree}, OLS test: {R2(y_test, y_pred)}\")\n",
-    "        print(f\"The MSE value for a polynomial of order {degree}, OLS test: {MSE(y_test, y_pred)}\")\n",
+    "    if CV == True:\n",
+    "#         print(f\"The R2 value for a polynomial of order {degree}, OLS test: {R2(y_test, y_pred)}\")\n",
+    "#         print(f\"The MSE value for a polynomial of order {degree}, OLS test: {MSE(y_test, y_pred)}\")\n",
     "        print(f\"\\nThe R2 value for a polynomial of order {degree}, OLS train: {R2(y_train, y_tilde)}\")\n",
     "        print(f\"The MSE value for a polynomial of order {degree}, OLS train: {MSE(y_train, y_tilde)}\")\n",
     "        \n",
-    "    return beta, y_pred"
+    "        print(f\"\\nThe R2 value for a polynomial of order {degree}, Ana train: {R2(y_train, y_ana)}\")\n",
+    "        print(f\"The MSE value for a polynomial of order {degree}, Ana train: {MSE(y_train, y_ana)}\")\n",
+    "        \n",
+    "    print(beta)\n",
+    "    print()\n",
+    "    print(betaAna)\n",
+    "    return beta, y_pred\n",
+    "\n",
+    "_, yy = olsRegression(X_train,X_test,y_train,y_test,1,1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
