Part A performs grid search over eta and samPerMini

--- a/Project 2/Project 2.ipynb
+++ b/Project 2/Project 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,72 +85,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "etas = [10^-4, 10^-3, 10^-2, 10^-1]\n",
-    "numMiniBatch = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "eta 0.0001\n",
+      "sam 1\n",
       "\n",
-      "The R2 value for a polynomial of order 5, OLS train: 0.9729194305382192\n",
-      "The MSE value for a polynomial of order 5, OLS train: 0.0020141301603733897\n",
+      "The R2 value for a polynomial of order 5, OLS train: 0.8841448654678465\n",
+      "The MSE value for a polynomial of order 5, OLS train: 0.009215886028819365\n",
+      "sam 4\n",
       "\n",
-      "The R2 value for a polynomial of order 5, Ana train: 0.9787329892861849\n",
-      "The MSE value for a polynomial of order 5, Ana train: 0.001581743979207379\n",
-      "[[ 0.44203531]\n",
-      " [ 1.00705751]\n",
-      " [ 0.51564604]\n",
-      " [-3.88306348]\n",
-      " [ 0.14270999]\n",
-      " [-2.00838877]\n",
-      " [ 1.86866122]\n",
-      " [ 0.30614536]\n",
-      " [-0.4468004 ]\n",
-      " [ 0.58530821]\n",
-      " [ 2.95268251]\n",
-      " [-0.4624873 ]\n",
-      " [ 2.64023932]\n",
-      " [-1.71623163]\n",
-      " [ 1.91770716]\n",
-      " [-2.18391212]\n",
-      " [-0.1136331 ]\n",
-      " [-0.41839019]\n",
-      " [-1.25037788]\n",
-      " [ 1.39791477]\n",
-      " [-1.19830279]]\n",
+      "The R2 value for a polynomial of order 5, OLS train: 0.8724018571651226\n",
+      "The MSE value for a polynomial of order 5, OLS train: 0.010150002816913447\n",
+      "sam 8\n",
       "\n",
-      "[[ 0.44203531]\n",
-      " [ 1.24797588]\n",
-      " [ 0.29523347]\n",
-      " [-4.49953049]\n",
-      " [-0.54424774]\n",
-      " [ 0.10509059]\n",
-      " [ 1.26031001]\n",
-      " [ 2.61592339]\n",
-      " [ 0.24034948]\n",
-      " [-5.61627528]\n",
-      " [ 5.34541355]\n",
-      " [-3.44027975]\n",
-      " [ 2.29726577]\n",
-      " [-2.68369269]\n",
-      " [ 9.27701219]\n",
-      " [-3.59182501]\n",
-      " [ 1.11703174]\n",
-      " [-0.1657703 ]\n",
-      " [-1.26348447]\n",
-      " [ 1.89484826]\n",
-      " [-4.23729917]]\n"
+      "The R2 value for a polynomial of order 5, OLS train: 0.845568144932382\n",
+      "The MSE value for a polynomial of order 5, OLS train: 0.012284534313214468\n",
+      "sam 16\n",
+      "\n",
+      "The R2 value for a polynomial of order 5, OLS train: 0.8368463862682052\n",
+      "The MSE value for a polynomial of order 5, OLS train: 0.012978320860910492\n",
+      "eta 0.001\n",
+      "sam 1\n",
+      "\n",
+      "The R2 value for a polynomial of order 5, OLS train: 0.9365057402696018\n",
+      "The MSE value for a polynomial of order 5, OLS train: 0.005050754664629951\n",
+      "sam 4\n",
+      "\n",
+      "The R2 value for a polynomial of order 5, OLS train: 0.9013500067130513\n",
+      "The MSE value for a polynomial of order 5, OLS train: 0.007847274948560847\n",
+      "sam 8\n",
+      "\n",
+      "The R2 value for a polynomial of order 5, OLS train: 0.8879045239654141\n",
+      "The MSE value for a polynomial of order 5, OLS train: 0.008916817848882557\n",
+      "sam 16\n",
+      "\n",
+      "The R2 value for a polynomial of order 5, OLS train: 0.885860384001654\n",
+      "The MSE value for a polynomial of order 5, OLS train: 0.009079422303221521\n",
+      "eta 0.01\n",
+      "sam 1\n",
+      "\n",
+      "The R2 value for a polynomial of order 5, OLS train: 0.9441862513683149\n",
+      "The MSE value for a polynomial of order 5, OLS train: 0.004439795856333216\n",
+      "sam 4\n",
+      "\n",
+      "The R2 value for a polynomial of order 5, OLS train: 0.950123500741937\n",
+      "The MSE value for a polynomial of order 5, OLS train: 0.003967507651128173\n",
+      "sam 8\n",
+      "\n",
+      "The R2 value for a polynomial of order 5, OLS train: 0.9408092178789836\n",
+      "The MSE value for a polynomial of order 5, OLS train: 0.0047084275046314255\n",
+      "sam 16\n",
+      "\n",
+      "The R2 value for a polynomial of order 5, OLS train: 0.9254559894720402\n",
+      "The MSE value for a polynomial of order 5, OLS train: 0.005929725151422843\n",
+      "eta 0.05\n",
+      "sam 1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/guest/PycharmProjects/FYS/lib/python3.7/site-packages/ipykernel_launcher.py:32: RuntimeWarning: overflow encountered in matmul\n",
+      "/home/guest/PycharmProjects/FYS/lib/python3.7/site-packages/ipykernel_launcher.py:35: RuntimeWarning: invalid value encountered in add\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The R2 value for a polynomial of order 5, OLS train: nan\n",
+      "The MSE value for a polynomial of order 5, OLS train: nan\n",
+      "sam 4\n",
+      "\n",
+      "The R2 value for a polynomial of order 5, OLS train: 0.9493404798411417\n",
+      "The MSE value for a polynomial of order 5, OLS train: 0.004029794328443367\n",
+      "sam 8\n",
+      "\n",
+      "The R2 value for a polynomial of order 5, OLS train: 0.9367896569574755\n",
+      "The MSE value for a polynomial of order 5, OLS train: 0.0050281700476624775\n",
+      "sam 16\n",
+      "\n",
+      "The R2 value for a polynomial of order 5, OLS train: 0.9503788416421953\n",
+      "The MSE value for a polynomial of order 5, OLS train: 0.0039471961418905376\n"
      ]
     }
    ],
@@ -159,176 +182,64 @@
     "\n",
     "sig2 = 0#.01 # noise variance\n",
     "degree = 5 # polynomial degree\n",
-    "n = 10 # number of data points for each feature\n",
-    "x1, x2, y = createDataPoints(n, sig2)\n",
-    "X_train = createDesignMatrix(x1,x2,degree)\n",
+    "n = 16 # number of data points for each feature\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.3)\n",
+    "x1, x2, y = createDataPoints(n, sig2)\n",
+    "X = createDesignMatrix(x1,x2,degree)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.25)\n",
     "X_train, X_test = Scale(X_train, X_test)\n",
     "y_train = y_train[:, np.newaxis]\n",
     "\n",
     "m = X_train.shape[0] # number of training examples\n",
-    "eta = 0.01\n",
-    "NIterations = 2000000\n",
-    "\n",
-    "def olsRegression(X_train,X_test,y_train,y_test, etas, numMiniBatch, CV=True):\n",
+    "samPerMini = [1, 4, 8, 16] # number of samples per mini-batch    \n",
+    "etas = [1E-4, 1E-3, 1E-2, 5E-2] # learning rates to use\n",
     "    \n",
-    "    beta = np.random.normal(scale=0.1, size=(X_train.shape[1],1))\n",
-    "    \n",
-    "    for i in range(NIterations):\n",
-    "        gradients = 2.0/m*X_train.T @ ((X_train @ beta)-y_train)\n",
-    "        beta -= eta*gradients\n",
-    "\n",
-    "    betaAna = np.linalg.pinv(X_train.T.dot(X_train)).dot(X_train.T).dot(y_train)\n",
-    "    y_tilde = (X_train @ beta)\n",
-    "    y_ana = (X_train @ betaAna)\n",
-    "    y_pred = (X_test @ beta)\n",
-    "    if CV == True:\n",
-    "#         print(f\"The R2 value for a polynomial of order {degree}, OLS test: {R2(y_test, y_pred)}\")\n",
-    "#         print(f\"The MSE value for a polynomial of order {degree}, OLS test: {MSE(y_test, y_pred)}\")\n",
-    "        print(f\"\\nThe R2 value for a polynomial of order {degree}, OLS train: {R2(y_train, y_tilde)}\")\n",
-    "        print(f\"The MSE value for a polynomial of order {degree}, OLS train: {MSE(y_train, y_tilde)}\")\n",
-    "        \n",
-    "        print(f\"\\nThe R2 value for a polynomial of order {degree}, Ana train: {R2(y_train, y_ana)}\")\n",
-    "        print(f\"The MSE value for a polynomial of order {degree}, Ana train: {MSE(y_train, y_ana)}\")\n",
-    "        \n",
-    "    print(beta)\n",
-    "    print()\n",
-    "    print(betaAna)\n",
-    "    return beta, y_pred\n",
-    "\n",
-    "_, yy = olsRegression(X_train,X_test,y_train,y_test,1,1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 160,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "The R2 value for a polynomial of order 5, OLS train: 0.9108586277315887\n",
-      "The MSE value for a polynomial of order 5, OLS train: 0.006629931718248028\n",
-      "\n",
-      "The R2 value for a polynomial of order 5, Ana train: 0.9787329892861849\n",
-      "The MSE value for a polynomial of order 5, Ana train: 0.001581743979207379\n",
-      "[[ 0.44188995]\n",
-      " [ 0.13475272]\n",
-      " [ 0.1960883 ]\n",
-      " [-0.9056089 ]\n",
-      " [ 0.20038305]\n",
-      " [-0.80710424]\n",
-      " [ 0.11261545]\n",
-      " [ 0.13802502]\n",
-      " [-0.16645109]\n",
-      " [-0.08736562]\n",
-      " [ 0.52980591]\n",
-      " [ 0.29866148]\n",
-      " [ 0.08891222]\n",
-      " [-0.18540487]\n",
-      " [ 0.29692551]\n",
-      " [-0.14036431]\n",
-      " [-0.34555878]\n",
-      " [ 0.05127774]\n",
-      " [-0.0237595 ]\n",
-      " [ 0.07248473]\n",
-      " [ 0.19269134]]\n",
-      "\n",
-      "[[ 0.44203531]\n",
-      " [ 1.24797588]\n",
-      " [ 0.29523347]\n",
-      " [-4.49953049]\n",
-      " [-0.54424774]\n",
-      " [ 0.10509059]\n",
-      " [ 1.26031001]\n",
-      " [ 2.61592339]\n",
-      " [ 0.24034948]\n",
-      " [-5.61627528]\n",
-      " [ 5.34541355]\n",
-      " [-3.44027975]\n",
-      " [ 2.29726577]\n",
-      " [-2.68369269]\n",
-      " [ 9.27701219]\n",
-      " [-3.59182501]\n",
-      " [ 1.11703174]\n",
-      " [-0.1657703 ]\n",
-      " [-1.26348447]\n",
-      " [ 1.89484826]\n",
-      " [-4.23729917]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "np.random.seed(26)\n",
-    "\n",
-    "sig2 = 0#.01 # noise variance\n",
-    "degree = 5 # polynomial degree\n",
-    "n = 10 # number of data points for each feature\n",
-    "x1, x2, y = createDataPoints(n, sig2)\n",
-    "X_train = createDesignMatrix(x1,x2,degree)\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.3)\n",
-    "X_train, X_test = Scale(X_train, X_test)\n",
-    "y_train = y_train[:, np.newaxis]\n",
-    "\n",
-    "m = X_train.shape[0] # number of training examples\n",
-    "samPerMini = 7\n",
-    "numMiniBatch = np.int(m/samPerMini)\n",
-    "eta = 0.01\n",
-    "    \n",
-    "n_epochs = 1000\n",
+    "n_epochs = 10000 # number of epochs\n",
     "t0, t1 = 5, 50\n",
     "def learning_schedule(t):\n",
     "    return t0/(t+t1)\n",
     "\n",
-    "def momentumSGD(beta):\n",
+    "def momentumSGD(beta, n_epochs, numMiniBatch, samPerMini, eta):\n",
     "    gamma = 0.9\n",
     "    velocity = 0\n",
     "    for epoch in range(n_epochs):\n",
     "        for i in range(numMiniBatch):\n",
-    "#             random_index = np.random.randint(m)\n",
-    "#             xi = X_train[random_index:random_index+1]\n",
-    "#             yi = y_train[random_index:random_index+1]\n",
     "\n",
     "            xi = X_train[i*samPerMini:(i+1)*samPerMini]\n",
-    "#             print(\"xi\",xi.shape)\n",
     "            yi = y_train[i*samPerMini:(i+1)*samPerMini]\n",
-    "#             print(\"yi\",yi.shape)\n",
     "            \n",
-    "            gradients = 2 * xi.T @ ((xi @ beta)-yi)\n",
+    "            gradients = 2/samPerMini * xi.T @ ((xi @ beta)-yi)\n",
     "            velocity = gamma*velocity + (1-gamma)*gradients\n",
-    "    #             eta = learning_schedule(epoch*m+i)\n",
+    "#             eta = learning_schedule(epoch*m+i)\n",
     "            beta = beta - eta*velocity\n",
     "    return beta\n",
     "\n",
-    "def olsRegression(X_train,X_test,y_train,y_test, etas, numMiniBatch, CV=True):\n",
+    "def olsRegression(X_train,X_test,y_train,y_test, n_epochs, samPerMini, etas):\n",
     "    \n",
-    "    beta = np.random.normal(scale=0.1, size=(X_train.shape[1],1))\n",
+    "    for eta in etas:\n",
+    "        print(\"eta\", eta)\n",
+    "        for i, _samPerMini in enumerate(samPerMini):\n",
+    "            print(\"sam\", _samPerMini)\n",
+    "            beta = np.random.normal(scale=0.1, size=(X_train.shape[1],1))\n",
+    "            beta = momentumSGD(beta, n_epochs, np.int(m/samPerMini[i]), samPerMini[i], eta)\n",
     "\n",
-    "    beta = momentumSGD(beta)\n",
-    "    \n",
-    "    betaAna = np.linalg.pinv(X_train.T.dot(X_train)).dot(X_train.T).dot(y_train)\n",
-    "    y_tilde = (X_train @ beta)\n",
-    "    y_ana = (X_train @ betaAna)\n",
-    "    y_pred = (X_test @ beta)\n",
-    "    if CV == True:\n",
-    "#         print(f\"The R2 value for a polynomial of order {degree}, OLS test: {R2(y_test, y_pred)}\")\n",
-    "#         print(f\"The MSE value for a polynomial of order {degree}, OLS test: {MSE(y_test, y_pred)}\")\n",
-    "        print(f\"\\nThe R2 value for a polynomial of order {degree}, OLS train: {R2(y_train, y_tilde)}\")\n",
-    "        print(f\"The MSE value for a polynomial of order {degree}, OLS train: {MSE(y_train, y_tilde)}\")\n",
-    "        \n",
-    "        print(f\"\\nThe R2 value for a polynomial of order {degree}, Ana train: {R2(y_train, y_ana)}\")\n",
-    "        print(f\"The MSE value for a polynomial of order {degree}, Ana train: {MSE(y_train, y_ana)}\")\n",
-    "        \n",
-    "    print(beta)\n",
-    "    print()\n",
-    "    print(betaAna)\n",
+    "            betaAna = np.linalg.pinv(X_train.T.dot(X_train)).dot(X_train.T).dot(y_train)\n",
+    "            y_tilde = (X_train @ beta)\n",
+    "            y_ana = (X_train @ betaAna)\n",
+    "            y_pred = (X_test @ beta)\n",
+    "\n",
+    "        #     print(f\"The R2 value for a polynomial of order {degree}, OLS test: {R2(y_test, y_pred)}\")\n",
+    "        #     print(f\"The MSE value for a polynomial of order {degree}, OLS test: {MSE(y_test, y_pred)}\")\n",
+    "            print(f\"\\nThe R2 value for a polynomial of order {degree}, OLS train: {R2(y_train, y_tilde)}\")\n",
+    "            print(f\"The MSE value for a polynomial of order {degree}, OLS train: {MSE(y_train, y_tilde)}\")\n",
+    "\n",
+    "#             print(f\"\\nThe R2 value for a polynomial of order {degree}, Ana train: {R2(y_train, y_ana)}\")\n",
+    "#             print(f\"The MSE value for a polynomial of order {degree}, Ana train: {MSE(y_train, y_ana)}\")\n",
+    "\n",
     "    return beta, y_pred\n",
     "\n",
-    "_, yy = olsRegression(X_train,X_test,y_train,y_test,1,1)"
+    "_, yy = olsRegression(X_train,X_test,y_train,y_test,n_epochs, samPerMini, etas)"
    ]
   },
   {
